--- a/ruby_testing/.rubocop.yml
+++ b/ruby_testing/.rubocop.yml
@@ -5,7 +5,7 @@ AllCops:
   NewCops: enable
 Metrics/BlockLength:
   Exclude:
-    - '*/spec/*'
+    - '/*/spec/*'
     - 'spec_answers/*'
 Layout/LineLength:
   Exclude:
