--- a/ruby_testing/.rubocop.yml
+++ b/ruby_testing/.rubocop.yml
@@ -1,11 +1,11 @@
 AllCops:
   Exclude:
-    - 'Gemfile'
+    - '../Gemfile'
     - 'spec/spec_helper.rb'
   NewCops: enable
 Metrics/BlockLength:
   Exclude:
-    - '/*/spec/*'
+    - 'spec/*'
     - 'spec_answers/*'
 Layout/LineLength:
   Exclude:
